--- a/services/web/src/styles.scss
+++ b/services/web/src/styles.scss
@@ -1,6 +1,7 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 @import "primevue/resources/themes/aura-dark-blue/theme.css";
+@import 'vue-virtual-scroller/dist/vue-virtual-scroller.css';
 
 html, body {
     width: 100%;
