fix: add 100svh to fix mobile layout

--- a/services/web/src/styles.scss
+++ b/services/web/src/styles.scss
@@ -13,3 +13,8 @@ body {
 .select-button-flex>div {
     flex-grow: 1 !important;
 }
+
+.h-screen-mobile {
+    height: 100vh;
+    height: 100svh;
+}
