--- a/services/web/src/styles.css
+++ b/services/web/src/styles.css
@@ -13,11 +13,16 @@ body {
 }
 
 /* for SearchFilters.vue */
-.select-button-flex>div {
+.select-button-flex>button {
     flex-grow: 1 !important;
 }
 
 .h-screen-mobile {
     height: 100vh;
     height: 100svh;
+}
+
+.autocomplete-group ul {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
